--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="./css/bootstrap.css" rel="stylesheet">
 	<link href="./css/bootstrap-theme.css" rel="stylesheet">
 	<link href="./css/custom.css" rel="stylesheet">
+	<link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body class="subpage" data-spy="scroll" data-target="#navbar-example" data-offset="50">
 	<div class="jumbotron col-md-12">
