--- a/board/member-content.html
+++ b/board/member-content.html
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="../main/hello.html">Ohse</a>
+					<a class="navbar-brand" href="../index.html">Ohse</a>
 				</div>
 				<div class="collapse navbar-collapse navbar-scrollspy">
 					<ul class="nav navbar-nav">
@@ -46,37 +46,90 @@
 				</div>
 				<div class="col-md-5 reply">
 					<h4>댓글</h4>
-					<div class="media">
-						<a class="pull-left" href="#"> 
-							<img class="media-object" src="../images/pic.jpg" alt="...">
-						</a>
-						<div class="media-body">
-							<h4 class="media-heading">김</h4>
-							Lorem ipsum dolor sit amet, consectetur	adipiscing elit. Pellentesque non orci interdum, pharetra dui nec, eleifend ligula. Integer rutrum nunc a mi luctus vehicula.
+					<form action="#" class="form-group">
+						<div class="form-group">
+							<textarea rows="3" class="form-control"></textarea>
 						</div>
-					</div>
-					<div class="media">
-						<a class="pull-left" href="#"> 
-							<img class="media-object" src="../images/pic.jpg" alt="...">
-						</a>
-						<div class="media-body">
-							<h4 class="media-heading">Media heading</h4>
-							여기는 기본내용이 들어가는 곳 입니다. Lorem ipsum dolor sit amet, consectetur
-							adipiscing elit. Pellentesque non orci interdum, pharetra dui nec,
-							eleifend ligula. Integer rutrum nunc a mi luctus vehicula.
-							<div class="media">
+						<button type="submit" class="btn btn-default">댓글 쓰기</button>
+					</form>
+					<div class="panel-group" id="accordion">
+						<div class="panel panel-default">
+							<div class="panel-heading media">
 								<a class="pull-left" href="#"> 
-									<img class="media-object" src="../images/pic.jpg" alt="...">
+									<img alt="Generic placeholder image" src="../images/pic.jpg">
 								</a>
 								<div class="media-body">
-									<h4 class="media-heading">Media heading</h4>
-									여기는 기본내용이 들어가는 곳 입니다. Lorem ipsum dolor sit amet, consectetur
-									adipiscing elit. Pellentesque non orci interdum, pharetra dui nec,
-									eleifend ligula. Integer rutrum nunc a mi luctus vehicula.
+									<h4 class="media-heading">김</h4>
+									Cras sit amet nibh libero,
+									<br><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"> 더보기 </a>
+								</div>
+							</div>
+							<div id="collapseOne" class="panel-collapse collapse in">
+								<div class="media panel-body">
+									<a class="pull-left" href="#">
+										<img alt="Generic placeholder image" src="../images/pic.jpg">
+									</a>
+									<div class="media-body">
+										<h4 class="media-heading">박</h4>
+										Cras sit amet nibh libero, 
+									</div>
+								</div>
+								<div class="media panel-body">
+									<a class="pull-left" href="#">
+										<img alt="Generic placeholder image" src="../images/pic.jpg">
+									</a>
+									<div class="media-body">
+										<h4 class="media-heading">박</h4>
+										Cras sit amet nibh libero, 
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<ul class="media-list">
+						<li class="media">
+							<a class="pull-left" href="#"> 
+								<img alt="Generic placeholder image" src="../images/pic.jpg">
+							</a>
+							<div class="media-body">
+								<h4 class="media-heading">김</h4>
+								<p>Cras sit amet nibh libero, </p>
+								<div class="media">
+									<a class="pull-left" href="#"> 
+										<img alt="Generic placeholder image" src="../images/pic.jpg">
+									</a>
+									<div class="media-body">
+										<h4 class="media-heading">이</h4>
+										Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+										scelerisque ante sollicitudin commodo. Cras purus odio,
+										vestibulum in vulputate at, tempus viverra turpis.
+										<!-- Nested media object -->
+										<div class="media">
+											<a class="pull-left" href="#">
+												<img alt="Generic placeholder image" src="../images/pic.jpg">
+											</a>
+											<div class="media-body">
+												<h4 class="media-heading">박</h4>
+												Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+												scelerisque ante sollicitudin commodo. Cras purus odio,
+												vestibulum in vulputate at, tempus viverra turpis.
+											</div>
+										</div>
+									</div>
+								</div>
+							</div></li>
+						<li class="media">
+							<a class="pull-left" href="#"> 
+								<img alt="Generic placeholder image" src="../images/pic.jpg">
+							</a>
+							<div class="media-body">
+								<h4 class="media-heading">최</h4>
+								<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+									scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum
+									in vulputate at, tempus viverra turpis.</p>
+							</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -92,5 +145,10 @@
 	</footer>
 	<script src="../js/jquery-3.5.1.js"></script>
 	<script src="../js/bootstrap.js"></script>
+    <script type="text/javascript">
+		$(function () { $('#collapseOne').collapse({
+			toggle: true
+		})});
+    </script>
 </body>
 </html>
