--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="./main/hello.html">Ohse</a>
+					<a class="navbar-brand" href="index.html">Ohse</a>
 				</div>
 				<div class="collapse navbar-collapse navbar-scrollspy">
 					<ul class="nav navbar-nav">
