--- a/member/login.html
+++ b/member/login.html
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="../main/hello.html">Ohse</a>
+					<a class="navbar-brand" href="../index.html">Ohse</a>
 				</div>
 				<div class="collapse navbar-collapse navbar-scrollspy">
 					<ul class="nav navbar-nav navbar-right">
@@ -33,7 +33,7 @@
 		<div class="subpage">
 			<div class="col-sm-12 form-group">
 			<h2>LOGIN</h2><br>
-				<form action="../main/hello.html">
+				<form action="../index.html">
 					<div class="form-group">
 						<label>아이디</label> <input type="text" name="id" class="form-control" placeholder="아이디" autofocus>
 					</div>
