ui구현 포트폴리오 제출

--- a/board/free-list.html
+++ b/board/free-list.html
@@ -87,14 +87,27 @@
 						</tr>
 					</tbody>
 				</table>
-				<div align="center">
+				<div class="col-xs-9">
+					<select class="btn-sm btn-default">
+						<option value="content">글내용</option>
+						<option value="subject">글제목</option>
+						<option value="name">작성자</option>
+					</select>
+					<input type="text" name="search"> 
+					<input type="submit" value="검색" class="btn-sm btn-default">
+				</div>
+				<div align="right" class="col-xs-3">
+					<button type="button" class="btn-sm btn-default">글쓰기</button>
+				</div>
+				<div align="center" class="col-xs-12">
 					<ul class="pagination">
 						<li class="disabled"><a href="#">«</a></li>
 						<li class="active"><a href="#">1</a></li>
 						<li><a href="#">2</a></li>
 						<li><a href="#">3</a></li>
 						<li><a href="#">4</a></li>
-						<li class="disabled"><a href="#">»</a></li>
+						<li><a href="#">5</a></li>
+						<li><a href="#">»</a></li>
 					</ul>
 				</div>
 			</div> 
