--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<link href="./css/bootstrap-theme.css" rel="stylesheet">
 	<link href="./css/custom.css" rel="stylesheet">
 	<link rel="shortcut icon" href="" type="image/x-icon">
+	<style type="text/css">
+		.table-hover {
+			cursor: pointer;
+		}
+	</style>
 </head>
 <body class="subpage" data-spy="scroll" data-target="#navbar-example" data-offset="50">
 	<div class="jumbotron col-md-12">
@@ -122,7 +127,7 @@
 					<tbody>
 						<tr>
 							<td>36</td>
-							<td>제목이 너~~~~~~~~~~~~~~~~~~~~~무 길어요</td>
+							<td>제목이 너~~~~~~~~~~~~무 길어요</td>
 							<td>ab</td>
 							<td>2020/06/25</td>
 							<td>15</td>
@@ -177,7 +182,7 @@
 					<tbody>
 						<tr>
 							<td>26</td>
-							<td>자유 낙하 운동(motion of free fall)</td>
+							<td onclick="location.href='./board/member-content.html'">자유 낙하 운동(motion of free fall)</td>
 							<td>ab</td>
 							<td>2020/06/25</td>
 							<td>15</td>
