--- a/board/member-list.html
+++ b/board/member-list.html
@@ -9,6 +9,9 @@
 	<link href="../css/custom.css" rel="stylesheet">
 	<link rel="shortcut icon" href="" type="image/x-icon">
 	<style>
+		.goContent {
+			cursor: pointer;
+		}
 	</style>
 </head>
 <body data-spy="scroll" data-target="#navbar-example" data-offset="50">
@@ -40,7 +43,7 @@
 			<div class="col-sm-12 form-group table-responsive">
 				<h2>회원 게시판</h2><br>
 				<div class="row">
-					<div class="col-sm-6 col-md-3">
+					<div class="col-sm-6 col-md-3 goContent">
 						<div class="thumbnail" onclick="location.href='../board/member-content.html'">
 							<img src="../images/freefall.png" alt="#">
 							<div class="caption">
@@ -129,7 +132,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-9">
+				<div class="col-xs-9">
 					<select class="btn-sm btn-default">
 						<option value="content">글내용</option>
 						<option value="subject">글제목</option>
@@ -138,7 +141,7 @@
 					<input type="text" name="search"> 
 					<input type="submit" value="검색" class="btn-sm btn-default">
 				</div>
-				<div align="right" class="col-sm-3">
+				<div align="right" class="col-xs-3">
 					<button type="button" class="btn-sm btn-default">글쓰기</button>
 				</div>
 				<div align="center" class="col-xs-12">
