--- a/member/join.html
+++ b/member/join.html
@@ -33,7 +33,7 @@
 		<div class="subpage col-xs-12 form-group">
 			<h2>JOIN</h2><br>
 			<form id="join" action="login.html" name="frm" onsubmit="return check();">
-				<fieldset>
+				<fieldset class="col-md-6">
 					<legend>필수 입력</legend>
 					<div class="form-group">
 						<label for="id">아이디</label> 
@@ -63,12 +63,11 @@
 					</div>
 					<div class="form-group">
 						<label>성별</label> <br>
-						<input id="man" name="gender" type="radio" value="남"><label for="man">남자</label>
-						<input id="woman" name="gender" type="radio" value="여"><label for="woman">여자</label>
+						<input id="man" name="gender" type="radio" value="남"><label for="man"> 남자 </label>
+						<input id="woman" name="gender" type="radio" value="여"><label for="woman"> 여자 </label>
 					</div>
 				</fieldset>
-				<br>
-				<fieldset>
+				<fieldset class="col-md-6">
 					<legend>추가 입력</legend>
 					<div class="form-group">
 						<label for="address">주소</label> 
@@ -172,8 +171,13 @@
 				frm.gender[0].focus();
 				return false;
 			} else {
-				alert('회원가입 완료');
-				return true;
+				var isJoin = confirm('입력하신 내용으로 회원가입 하시겠습니까?');
+				if (!isJoin) {
+					return false;
+				} else {
+					alert('회원가입 완료');
+					return true;
+				}
 			}
 		}
 	</script>
